--- a/services/guttering-carcroft.html
+++ b/services/guttering-carcroft.html
@@ -1,1 +1,560 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Home Repairs Carcroft - Guttering Services, Cleaning, Clearing, Repairs, Replacement - Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/guttering-carcroft.html">
+<meta name="description" content="Professional guttering services in Carcroft - repairs, cleaning, replacements and new installs. Reliable local family team, free quotes, fast response.">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Guttering Services in Carcroft, near Doncaster</h2>
+<p>Carcroft is a growing area near Doncaster with a mix of older and newer properties, all of which rely on well-maintained guttering to protect their structure. Effective guttering channels rainwater safely away from your home, preventing damp, mould, and damage to brickwork and foundations. Keeping your system in good condition is a simple way to avoid costly repairs in the future.</p>
+<img src="/images/internal-repairs.webp"
+alt="Internal minor home repairs in Doncaster, fixing doors, walls, and small household issues professionally"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Local Knowledge Matters</h2>
+<p>Homes in Carcroft face regular rainfall and seasonal leaf fall, which can quickly lead to blocked gutters. Working with a local service means you get support from people who understand the area, the weather patterns, and the types of buildings found around Doncaster. This allows for quicker response times and solutions that actually suit your property.</p>
+<img src="/images/cleaned-gutters-before-after.webp"
+alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Gutter Cleaning and Clearing</h2>
+<p>Regular gutter cleaning is essential to keep rainwater flowing freely. Leaves, moss, and debris can build up quietly until problems appear inside your home. Clearing gutters before and after winter helps prevent overflows, staining on walls, and damage to roof edges.</p>
+<img src="/images/house-before-after.webp"
+alt="Exterior painting in Doncaster including houses, metal garden rails, gates and wooden fencing"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Preventing Water Damage</h2>
+<p>Blocked or broken guttering can cause water to spill down walls and collect around foundations. Over time, this can lead to damp patches, peeling paint, and even structural issues. Routine maintenance and timely repairs protect both the appearance and strength of your property.</p>
+<img src="/images/upvc-restoration.webp"
+alt="uPVC restoration in Doncaster with detailed cleaning of frames, doors, fascias and guttering"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Gutter Repairs You Can Rely On</h2>
+<p>Small problems like leaks, loose joints, or sagging sections can turn into major issues if ignored. Professional repairs restore your system without the need for full replacement. Fixing faults early saves money and keeps your guttering working as it should.</p>
+<img src="/images/conservatory-before-after.webp"
+alt="Full conservatory valet in Doncaster including inside and outside cleaning of glass, frames and roof"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 6 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Gutter Replacement Options</h2>
+<p>When guttering is old, cracked, or beyond repair, replacement becomes the best option. Modern materials offer better durability and improved appearance. New systems are designed to handle heavy rainfall while complementing the style of your home in Carcroft.</p>
+<img src="/images/window-cleaning-service.webp"
+alt="Regular window cleaning in Doncaster for homes and business with clear, streak free results"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 7 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Domestic and Commercial Services</h2>
+<p>Guttering services are not just for houses. Shops, offices, and industrial units around Doncaster also need reliable drainage. Regular cleaning and maintenance reduce the risk of leaks that could damage stock, equipment, or interiors.</p>
+<img src="/images/pressure-wash.webp"
+alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 8 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Keeping Your Property Protected</h2>
+<p>Good guttering is about more than just moving water—it protects your investment. Whether it’s cleaning, clearing, repairs, or full replacement, keeping your guttering in top condition ensures your Carcroft property stays dry, safe, and looking its best all year round.
+
+</p>
+</section>
+ 
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+
+<div>
+<p><strong>What types of internal minor home repairs do you handle?</strong><br>
+We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear.</p>
+
+<p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
+Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
+
+<p><strong>Can you repair damaged gutters?</strong><br>
+Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency.</p>
+
+<p><strong>What does exterior decorating include?</strong><br>
+Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces.</p>
+
+<p><strong>Do you offer uPVC restoration?</strong><br>
+Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity. </p>
+
+<p><strong>Can you clean my conservatory?</strong><br>
+We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
+
+<p><strong>How often should I have my windows cleaned?</strong><br>
+Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
+
+<p><strong>What surfaces can you pressure wash?</strong><br>
+We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively.</p>
+
+<p><strong>Are your services suitable for all property types?</strong><br>
+Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs.</p>
+
+<p><strong>Do you offer same-day or urgent repairs?</strong><br>
+We aim to respond quickly and can often schedule repairs urgently to prevent further damage.</p>
+
+<p><strong>Is your work insured?</strong><br>
+Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work.</p>
+
+<p><strong>How do i schedule a service?</strong><br>
+Simply call us on 07735 873694 at a time convenient to you.</p>
+</div>
+
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+ <!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+document.getElementById("lightbox").style.display="flex";
+document.getElementById("lightboxImg").src=src;
+}
+function closeLightbox(){
+document.getElementById("lightbox").style.display="none";
+}
+</script>
+
+<!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What types of internal minor home repairs do you handle?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer gutter cleaning and maintenance?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage."
+}
+},
+{
+"@type": "Question",
+"name": "Can you repair damaged gutters?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency."
+}
+},
+{
+"@type": "Question",
+"name": "What does exterior decorating include?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Exterior decorating covers external house painting, metal garden rails and gate painting, and fence painting to refresh your property's look and protect surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer uPVC restoration?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity."
+}
+},
+{
+"@type": "Question",
+"name": "Can you clean my conservatory?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard."
+}
+},
+{
+"@type": "Question",
+"name": "How often should I have my windows cleaned?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained."
+}
+},
+{
+"@type": "Question",
+"name": "What surfaces can you pressure wash?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We pressure wash driveways, paths, walls, decking, and roofs, removing moss, algae, dirt, and grime safely and effectively."
+}
+},
+{
+"@type": "Question",
+"name": "Are your services suitable for all property types?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer same-day or urgent repairs?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We aim to respond quickly and can often schedule repairs urgently to prevent further damage."
+}
+},
+{
+"@type": "Question",
+"name": "Is your work insured?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work."
+}
+},
+{
+"@type": "Question",
+"name": "How do I schedule a service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Simply call us on 07735 873694 at a time convenient to you."
+}
+}
+]
+}
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"url": "https://homerepairs4u.com/",
+"image": "https://homerepairs4u.com/images/logo.webp",
+"telephone": "07735873694",
+"priceRange": "£",
+"openingHours": "Mo-Fr 08:00-18:00",
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Doncaster",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+],
+"areaServed": [
+{ "@type": "Place", "name": "Doncaster" },
+{ "@type": "Place", "name": "Bentley" },
+{ "@type": "Place", "name": "Campsall" },
+{ "@type": "Place", "name": "Askern" },
+{ "@type": "Place", "name": "Adwick-le-Street" }
+],
+"makesOffer": [
+{
+"@type": "Service",
+"name": "Internal Minor Home Repairs"
+},
+{
+"@type": "Service",
+"name": "Guttering Service"
+},
+{
+"@type": "Service",
+"name": "Exterior Decorating"
+},
+{
+"@type": "Service",
+"name": "uPVC Restoration"
+},
+{
+"@type": "Service",
+"name": "Conservatory Valets"
+},
+{
+"@type": "Service",
+"name": "Regular Window Cleaning"
+},
+{
+"@type": "Service",
+"name": "Pressure Washing"
+}
+]
+}
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+},
+{
+"@type": "ListItem",
+"position": 2,
+"name": "Guttering Service",
+"item": "https://homerepairs4u.com/services/guttering.html"
+}
+]
+}
+</script>
+
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "WebPage",
+"name": "Home Repairs 4U - Doncaster",
+"url": "https://homerepairs4u.com/",
+"description": "Home Repairs 4U provides internal minor home repairs, guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing services across Doncaster and surrounding areas.",
+"breadcrumb": {
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+}
+]
+},
+"mainEntity": [
+{
+"@type": "WebPageElement",
+"name": "Internal Minor Home Repairs",
+"cssSelector": "section:nth-of-type(1)"
+},
+{
+"@type": "WebPageElement",
+"name": "Guttering Service",
+"cssSelector": "section:nth-of-type(2)"
+},
+{
+"@type": "WebPageElement",
+"name": "Exterior Decorating",
+"cssSelector": "section:nth-of-type(3)"
+},
+{
+"@type": "WebPageElement",
+"name": "uPVC Restoration",
+"cssSelector": "section:nth-of-type(4)"
+},
+{
+"@type": "WebPageElement",
+"name": "Conservatory Valets",
+"cssSelector": "section:nth-of-type(5)"
+},
+{
+"@type": "WebPageElement",
+"name": "Regular Window Cleaning",
+"cssSelector": "section:nth-of-type(6)"
+},
+{
+"@type": "WebPageElement",
+"name": "Pressure Washing",
+"cssSelector": "section:nth-of-type(7)"
+}
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
