--- a/services/guttering-carcroft.html
+++ b/services/guttering-carcroft.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ices<!DOCTYPE html>
 <html lang="en-GB">
 <head>
 
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>Home Repairs Carcroft - Guttering Services, Cleaning, Clearing, Repairs, Replacement - Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/guttering-carcroft.html">
+<link rel="canonical" href="https://homerepairs4u.com/services/guttering-carcroft.html">
 <meta name="description" content="Professional guttering services in Carcroft - repairs, cleaning, replacements and new installs. Reliable local family team, free quotes, fast response.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
