--- a/services/guttering-carcroft.html
+++ b/services/guttering-carcroft.html
@@ -216,41 +216,41 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
 
 <div>
-<p><strong>What types of internal minor home repairs do you handle?</strong><br>
-We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear.</p>
+<p><strong>How often should gutters be cleaned?</strong><br>
+Most homes need cleaning once or twice a year, usually in spring and autumn. Properties near trees may need it more often because leaves and debris build up faster.</p>
 
-<p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
-Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
+<p><strong>What happens if gutters are blocked?</strong><br>
+When they are blocked, water cannot flow away properly. It overflows down the walls and can cause damp, stains, and damage to brickwork and foundations.</p>
 
-<p><strong>Can you repair damaged gutters?</strong><br>
-Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency.</p>
+<p><strong>What is the difference between cleaning and clearing?</strong><br>
+Clearing removes leaves, moss, and debris that cause blockages. Cleaning then washes the system through so water flows freely again.</p>
 
-<p><strong>What does exterior decorating include?</strong><br>
-Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces.</p>
+<p><strong>Can small leaks be fixed?</strong><br>
+Yes, most small leaks can be repaired by sealing joints, replacing short sections, or tightening loose parts instead of changing the whole system.</p>
 
-<p><strong>Do you offer uPVC restoration?</strong><br>
-Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity. </p>
+<p><strong> How do I know if repairs are needed?</strong><br>
+Look for dripping water, sagging sections, cracks, or water marks on your walls. These are all signs something is not working properly.</p>
 
-<p><strong>Can you clean my conservatory?</strong><br>
-We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
+<p><strong>When is replacement the better option?</strong><br>
+If the system is very old, badly cracked, rusted, or leaking in many places, replacement is usually more practical than constant repairs.</p>
 
-<p><strong>How often should I have my windows cleaned?</strong><br>
-Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
+<p><strong>What materials are used today?</strong><br>
+Modern systems are made from strong materials like plastic or metal that last longer and cope better with heavy rain.</p>
 
-<p><strong>What surfaces can you pressure wash?</strong><br>
-We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively.</p>
+<p><strong>Do you work on homes and businesses?</strong><br>
+Yes, services are available for houses, shops, offices, and larger buildings.</p>
 
-<p><strong>Are your services suitable for all property types?</strong><br>
-Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs.</p>
+<p><strong>Can damage from bad weather be fixed?</strong><br>
+Strong wind and heavy rain can loosen parts or cause leaks. These problems can usually be repaired quickly.</p>
 
-<p><strong>Do you offer same-day or urgent repairs?</strong><br>
-We aim to respond quickly and can often schedule repairs urgently to prevent further damage.</p>
+<p><strong>How long does cleaning take?</strong><br>
+Most jobs take between one and two hours, depending on the size of the building and how blocked the system is.</p>
 
-<p><strong>Is your work insured?</strong><br>
-Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work.</p>
+<p><strong>Will there be a mess left behind?</strong><br>
+No, all waste is removed and the area is left clean and tidy.</p>
 
-<p><strong>How do i schedule a service?</strong><br>
-Simply call us on 07735 873694 at a time convenient to you.</p>
+<p><strong>Why use a local service?</strong><br>
+A nearby team can respond faster, understands local conditions, and provides more reliable support.</p>
 </div>
 
 </section>
